--- a/index.css
+++ b/index.css
@@ -15,7 +15,8 @@ body {
     padding: 0px 50px
 }
 
-.sidebarOpenButton {
+/* sidebar design */
+.sidebarOpenBtn {
     border: none;
     display: inline-block;
     padding: 8px 16px;
@@ -31,11 +32,16 @@ body {
     position: fixed!important;
     z-index: 1;
     overflow: auto;
-    transition-duration: 0.4s;
+    transition: all 1s;
 }
 
 .sidebar:hover {
     cursor: default;
+}
+
+.sidebarHidden {
+    transform: translateX(-12rem);
+    transition: transform 300ms ease-out;
 }
 
 .sidebarItem {
@@ -53,26 +59,27 @@ body {
     cursor: default;
 }
 
-.sidebarClose {
+.sidebarBtn:hover {
+    background-color: #333333;
+}
+
+.sidebarCloseBtn {
     width: 100%;
     border-width: 1px;
     border-bottom-style: solid;
-    border-color: #000000;
+    border-color: #333333;
 }
 
-.sidebarButton:hover {
-    background-color: #333333;
-    border: none;
-    color: #DDDDDD;
-}
-
+/* sidebar dropdown design */
 .sidebarDropdownBtn {
-    width: 100%;
+    height: 25px;
+    width: 150px;
     background-color: inherit;
+    padding: 4px 16px;
     color: #DDDDDD;
     font-family: "Georgia", Times, Serif;
-    padding: 16px;
     font-size: 16px;
+    text-align: left;
     border: none;
 }
 
@@ -106,7 +113,8 @@ body {
 }
 
 .sidebarDropdown:hover .sidebarDropdownBtn {
-    background-color: lightcoral;
+    background-color: palegoldenrod;
+    color: #000000;
 }
 
 .currentProject {
