--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
     background-color: #333333;
 }
 
+/* general functions for aesthetic and consistency */
 .large {
     font-size: 18px!important;
 }
@@ -15,6 +16,27 @@ body {
     padding: 0px 50px
 }
 
+ /* key frames for the sidebar animation js function  */
+@keyframes slide-right {
+    from {
+        margin-left: -100%;
+    }
+    to {
+        margin-left: 0%;
+    }
+}
+
+@keyframes slide-left {
+    from {
+        margin-left: 0%;
+    }
+
+    to {
+        margin-left: -100%;
+        display: none;
+    }
+}
+
 /* sidebar design */
 .sidebarOpenBtn {
     border: none;
@@ -25,23 +47,17 @@ body {
     text-align: center;
 }
 
+.sidebarOpenBtn:hover {
+    cursor: pointer;
+}
+
 .sidebar {
     height: 100%;
     width: 200px;
     background-color: #444444;
-    position: fixed!important;
-    z-index: 1;
+    position: fixed!important; /*this allows it to slide over the content instead of moving it*/
+    z-index: 1; /*similar to layers, higher z-index is on top*/
     overflow: auto;
-    transition: all 1s;
-}
-
-.sidebar:hover {
-    cursor: default;
-}
-
-.sidebarHidden {
-    transform: translateX(-12rem);
-    transition: transform 300ms ease-out;
 }
 
 .sidebarItem {
@@ -54,7 +70,7 @@ body {
     font-family: "Georgia", Times, Serif;
     text-decoration: none;
     text-align: left;
-    display: block;
+    /*display: block;*/
     outline: 0;
     cursor: default;
 }
@@ -70,10 +86,14 @@ body {
     border-color: #333333;
 }
 
+.sidebarCloseBtn:hover {
+    background-color: #333333;
+}
+
 /* sidebar dropdown design */
 .sidebarDropdownBtn {
     height: 25px;
-    width: 150px;
+    width: 180px;
     background-color: inherit;
     padding: 4px 16px;
     color: #DDDDDD;
@@ -93,7 +113,7 @@ body {
     position: absolute;
     background-color: #444444;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 16px 0px #222222;
     z-index: 1;
 }
 
@@ -115,6 +135,16 @@ body {
 .sidebarDropdown:hover .sidebarDropdownBtn {
     background-color: palegoldenrod;
     color: #000000;
+}
+
+.img {
+    border: 1px solid #333333;
+    padding: 5px;
+    width: 100px;
+}
+
+.img:hover {
+    box-shadow: 0px 8px 16px 0px #000000;
 }
 
 .currentProject {
