--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
 body {
+    width: 100%;
+    height: 100%;
     background-color: #333333;
 }
 
@@ -13,7 +15,14 @@ body {
 
 .white {
     color: #DDDDDD;
-    padding: 0px 50px
+    padding: 0px 50px;
+    text-align: left;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
  /* key frames for the sidebar animation js function  */
@@ -139,14 +148,57 @@ body {
 
 .img {
     border: 1px solid #333333;
-    padding: 5px;
-    width: 100px;
 }
 
 .img:hover {
     box-shadow: 0px 8px 16px 0px #000000;
 }
 
-.currentProject {
-    position: absolute;
+/* card for image and text of the current project */
+.currProjCard {
+    width: 50%;
+    box-shadow: 0 4px 8px 0 #111111;
+    transition: 0.3s;
+    float: left;
+}
+
+.currProjCard:hover {
+    box-shadow: 0 8px 16px 0 #111111;
+}
+
+/* text of the current project */
+.currProjCardText {
+    padding: 2px 16px;
+}
+
+/* container for the other projects in the gallery */
+.projGallery {
+    width: 20%;
+    float: left;
+    padding-left: 5%;
+}
+
+/* card for the other projects in the gallery */
+.projCard {
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+    border: 1px solid #444444;
+    box-shadow: 0 4px 8px 0 #111111;
+    transition: 0.3s;
+}
+
+.projCard:hover {
+    box-shadow: 0 8px 16px 0 #111111;
+}
+
+/* text of the other projects */
+.projCardText {
+    padding: 2px 2px;
+}
+
+.text {
+    
+    font-size: 12px;
+    text-align: left;
 }
