--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@
     width: 100%;
     margin-bottom: 20px;
     border: 1px solid #444444;
+    border-radius: 5px;
     box-shadow: 0 4px 8px 0 #111111;
     transition: 0.3s;
 }
