--- a/projectsPage.css
+++ b/projectsPage.css
@@ -1,18 +1,106 @@
+*{
+    box-sizing: border-box;
+    font-family: "Georgia", Times, Serif;
+}
+
 body {
     background-color: #333333;
+    margin: 4vh;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    border: 1px solid #ddd;
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-ul li {
-    padding: 8px 16px;
-    border-bottom:1px solid #ddd;
+.data{
+    width: 73%;
+    border-radius: 3px;
+    height: 92vh;
+    overflow-y: auto;
 }
 
-ul li:last-child {
-    border-bottom: none
+.searchbar {
+    width: 250px;
+    background-color: #DDDDDD;
+    border-radius: 3px;
+    padding: 9px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+input{
+    border: none;
+    outline: none;
+    background: none;
+}
+
+.glass:hover {
+    cursor: pointer;
+}
+
+#root {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+}
+
+.box {
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*justify-content: space-between;*/
+    border: 1px solid #444444;
+    border-radius: 5px;
+    padding: all 10px;
+    box-shadow: 0 4px 8px 0 #111111;
+    transition: 0.3s;
+}
+
+.box:hover {
+    box-shadow: 0 8px 16px 0 #111111;
+}
+
+.img-box {
+    width: 100%;
+    height: 176px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.images {
+    max-height: 90%;
+    max-width: 90%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.button {
+    width: 90%;
+    position: relative;
+    background-color: #444444;
+    border: none;
+    border-radius: 5px;
+    color: #DDDDDD;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    /*display: inline-block;*/
+    font-size: 14px;
+    margin: all 2px;
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: palegoldenrod;
+    color: #111111;
+}
+
+::-webkit-scrollbar{
+    display: none;
 }
