added "view" button to project page cards

--- a/projectsPage.css
+++ b/projectsPage.css
@@ -1,11 +1,11 @@
 *{
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     font-family: "Georgia", Times, Serif;
 }
 
 body {
     background-color: #333333;
-    margin: 4vh;
+    /*margin: 4vh;*/
 }
 
 .container {
@@ -81,7 +81,6 @@ input{
 }
 
 .button {
-    width: 90%;
     position: relative;
     background-color: #444444;
     border: none;
@@ -92,7 +91,7 @@ input{
     text-decoration: none;
     /*display: inline-block;*/
     font-size: 14px;
-    margin: all 2px;
+    /*margin: all 2px;*/
     cursor: pointer;
 }
 
@@ -103,4 +102,24 @@ input{
 
 ::-webkit-scrollbar{
     display: none;
+}
+
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.bottom{
+    margin-top: 20px;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 110px;
 }
