--- a/projectsPage.css
+++ b/projectsPage.css
@@ -55,6 +55,7 @@ input{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #333333;
     /*justify-content: space-between;*/
     border: 1px solid #444444;
     border-radius: 5px;
@@ -66,6 +67,10 @@ input{
 .box:hover {
     box-shadow: 0 8px 16px 0 #111111;
 }
+
+/*.small .box {
+    style='height: 33%; width: 100%; float: left; display: flex; flex-direction: column; overflow: hidden'
+}*/
 
 .img-box {
     width: 100%;
@@ -101,9 +106,9 @@ input{
     color: #111111;
 }
 
-::-webkit-scrollbar{
+/*::-webkit-scrollbar{
     display: none;
-}
+}*/
 
 /*.centerButton {
     margin: 0;
